grammar.js
/**
 * @file Syntax highlighting for Lume
 * @author Max T. Kristiansen <me@maxtrier.dk>
 * @license MIT
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

const PREC = {
  range: 0,
  assign: 1,
  cast: 2,
  is: 3,
  boolean: 3,
  unary: 4,
  bitwise: 5,
  equality: 6,
  comparison: 7,
  additive: 8,
  multiplicative: 9,
  inc_dec: 10,
  call: 11,
  member: 12,
  construct: 13,
  unsafe: 14,
};

// @ts-ignore
module.exports = grammar({
  name: "lume",

  extras: $ => [
    /\s/,
    $.doc_comment,
  ],

  conflicts: $ => [
    [$.path, $.variable_reference],
    [$.call_expression, $.binary_expression],
    [$._named_type, $.variant_pattern],
  ],

  word: $ => $.identifier,

  rules: {
    source_file: $ => repeat($._declaration),

    doc_comment: _ => token(repeat1(choice(
      seq(/\/\//, field('content', /.*\n/))
    ))),

    /**
     * Top-level declaration statements.
     */

    _declaration: $ => choice(
      $.import,
      $.namespace,
      $.struct_definition,
      $.function_definition,
      $.implementation,
      $.trait_definition,
      $.trait_implementation,
      $.enum_definition,

      $.statement,
      $.type,
      $.pattern,
    ),

    import: $ => seq(
      'import',
      field('root', $.path),
      field('items', seq(
        '(', sep1(',', $.identifier), ')'
      ))
    ),

    namespace: $ => seq(
      'namespace',
      field('path', $.path),
    ),

    attribute_argument: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    _attribute_arguments: $ => seq('(', sep(',', $.attribute_argument), ')',),

    attribute: $ => prec(1, seq(
      '!', '[',
      field('name', $.identifier),
      optional(field('arguments', $._attribute_arguments)),
      ']',
    )),

    attribute_list: $ => zero_or_more($.attribute),

    _visibility_modifier: _ => choice(
      seq('pub', optional(seq('(', 'internal', ')'))),
      'priv',
    ),

    struct_definition: $ => seq(
      zero_or_more($.attribute),
      optional($._visibility_modifier),
      'struct',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      field('fields', in_block($.struct_field))
    ),

    struct_field: $ => seq(
      zero_or_more($.attribute),
      optional($._visibility_modifier),
      field('name', $._field_identifier),
      ':',
      field('type', $.type),
      optional(seq(
        '=',
        field('default_value', $._expression),
      )),
      ';'
    ),

    trait_definition: $ => seq(
      zero_or_more($.attribute),
      optional($._visibility_modifier),
      'trait',
      field('name', $._type_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('block', $._method_list)
    ),

    enum_definition: $ => seq(
      zero_or_more($.attribute),
      optional($._visibility_modifier),
      'enum',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      field('variants', $.enum_variant_list)
    ),

    enum_variant_list: $ => braced(list(',', $.enum_variant_definition)),

    enum_variant_definition: $ => seq(
      zero_or_more($.attribute),
      field('name', $._type_identifier),
      field('fields', optional(paren(sep(',', $.type)))),
    ),

    implementation: $ => seq(
      zero_or_more($.attribute),
      'impl',
      optional(field('type_parameters', $.type_parameters)),
      field('type', $.type),
      field('block', $._method_list)
    ),

    trait_implementation: $ => seq(
      'use',
      field('name', $.type),
      ':',
      field('target', $.type),
      field('block', $._method_list)
    ),

    _method_list: $ => in_block($.method_definition),

    function_definition: $ => seq(
      zero_or_more($.attribute),
      $._function_signature,
      optional(field('block', $._block))
    ),

    _func_modifiers: _ => repeat1(choice('unsafe', 'external')),

    _function_signature: $ => seq(
      optional($._visibility_modifier),
      'fn',
      optional(field('modifiers', $._func_modifiers)),
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $.type))),
    ),

    parameters: $ => seq('(', sep(',', $.parameter), ')',),

    parameter: $ => choice(
      $.self,
      seq(
        optional('...'),
        field('name', $.identifier),
        ':',
        field('type', $.type),
      )
    ),

    _block: $ => in_block($.statement),

    method_definition: $ => seq(
      $._function_signature,
      optional(field('block', $._block))
    ),

    /**
     * Paths
     */

    self: _ => 'self',

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    _type_identifier: $ => alias(/[A-Z][a-zA-Z0-9_]*/, $.type_identifier),

    _field_identifier: $ => alias(/[a-z_][a-zA-Z0-9_]*/, $.field_identifier),

    path: $ => choice(
      $.self,
      $.identifier,
      $.scoped_type_identifier,
      $.scoped_identifier,
    ),

    scoped_type_identifier: $ => prec(2, seq(
      field('root', $.type),
      '::',
      field('name', $._type_identifier),
    )),

    scoped_identifier: $ => prec(1, seq(
      field('root', $.type),
      '::',
      field('name', $.identifier),
    )),

    /**
     * Types
     */

    self_type: _ => 'Self',

    type: $ => choice(
      $._named_type,
      $.array_type,
      $.self_type,
    ),

    _named_type: $ => prec.left(seq(
      field('name', $.path),
      optional(field('type_arguments', $.type_arguments))
    )),

    array_type: $ => seq('[', field('inner', $.type), ']'),

    type_arguments: $ => seq(
      prec(15, '<'),
      sep(',', $.type),
      optional(','),
      '>',
    ),

    type_parameters: $ => seq(
      '<',
      sep(',', seq(
        field('name', $.identifier),
        field('bounds', optional($._type_bounds)),
      )),
      optional(','),
      '>',
    ),

    _type_bounds: $ => seq(':', sep1('+', $.type)),

    /**
     * Statements
     */

    statement: $ => choice(
      $.variable_declaration,
      $.break_statement,
      $.continue_statement,
      $.infinite_loop,
      $.iterator_loop,
      prec(1, $.if_conditional),
      prec(1, $.switch_expression),
      $.predicate_loop,
      $.return_statement,
      prec.right(1, seq($._expression, optional(';'))),
    ),

    variable_declaration: $ => seq(
      'let',
      field('name', $.identifier),
      optional(seq(
        ':',
        field('declared_type', $.type)
      )),
      '=',
      field('value', $._expression),
      ';'
    ),

    break_statement: _ => seq('break', ';'),

    continue_statement: _ => seq('continue', ';'),

    infinite_loop: $ => seq('loop', $._block),

    iterator_loop: $ => seq(
      'for',
      field('name', $.identifier),
      'in',
      field('collection', $._expression),
      field('block', $._block),
    ),

    predicate_loop: $ => seq(
      'while',
      field('condition', $._expression),
      field('block', $._block),
    ),

    return_statement: $ => choice(
      prec.left(seq('return', $._expression)),
      prec(-1, 'return'),
      ';'
    ),

    /**
     * Expressions
     */

    _expression: $ => choice(
      $.is_expression,
      $.assignment_expression,
      $.binary_expression,
      $.call_expression,
      $.cast_expression,
      $.construct_expression,
      $.member_expression,
      $.if_conditional,
      $._nested_expression,
      $.variable_reference,
      $.range_expression,
      $.switch_expression,
      $.unary_expression,
      $.unsafe_expression,
      $.postfix_expression,
      $._literal,
      prec(1, $.self),
      prec(1, $.scoped_identifier),
    ),

    assignment_expression: $ => prec.left(PREC.assign, seq(
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=')),
      field('right', $._expression),
    )),

    call_expression: $ => prec(PREC.call, seq(
      field('callee', $._expression),
      optional(field('type_arguments', $.type_arguments)),
      field('arguments', $._arguments),
    )),

    _arguments: $ => seq(
      '(',
      sep(',', $._expression),
      optional(','),
      ')'
    ),

    cast_expression: $ => prec(PREC.cast, seq(
      field('source', $._expression),
      'as',
      field('type', $.type),
    )),

    binary_expression: $ => {
      /** @type {[number, ChoiceRule][]} */
      const table = [
        [PREC.bitwise, choice('&', '|', '^')],
        [PREC.boolean, choice('&&', '||')],
        [PREC.equality, choice('==', '!=')],
        [PREC.comparison, choice('<', '<=', '>', '>=')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/')],
      ];

      return choice(...table.map(([precedence, operator]) => prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression)
      ))));
    },

    construct_expression: $ => seq(
      field('name', $._named_type),
      field('field', seq('{', sep(',', $.constructor_field), '}')),
    ),

    constructor_field: $ => choice(
      $.named_constructor_field,
      $.implicit_constructor_field
    ),

    named_constructor_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression)
    ),

    implicit_constructor_field: $ => seq(
      field('name', $.identifier)
    ),

    member_expression: $ => seq(
      field('value', $._expression),
      '.',
      field('field', $.identifier)
    ),

    if_conditional: $ => seq(
      'if',
      $._conditional_case,
      optional($._else_if_conditional_cases),
      optional(field('else', $._else_conditional_case))
    ),

    _conditional_case: $ => seq(
      field('condition', $._expression),
      field('then', $._block),
    ),

    _else_if_conditional_cases: $ => repeat1(seq(
      'else', 'if',
      field('condition', $._expression),
      field('else_if', $._block),
    )),

    _else_conditional_case: $ => seq(
      'else', field('else', $._block),
    ),

    is_expression: $ => prec.left(PREC.is, seq(
      field('operand', $._expression),
      'is',
      field('pattern', $.pattern)
    )),

    _nested_expression: $ => seq('(', $._expression, ')'),

    variable_reference: $ => $.identifier,

    range_expression: $ => prec.left(PREC.range, seq(
      field('lower', $._expression),
      '..',
      optional(field('inclusive', '=')),
      field('upper', $._expression),
    )),

    _scope_expression: $ => in_block($.statement),

    switch_expression: $ => seq(
      'switch',
      field('operand', $._expression),
      field('then', braced(list(',', $._switch_arm))),
    ),

    _switch_arm: $ => seq(
      field('pattern', $.pattern),
      '=>',
      field('branch', choice(
        $._expression,
        $._block,
      )),
    ),

    unary_expression: $ => prec(PREC.unary,
      seq('!', $._expression)
    ),

    unsafe_expression: $ => prec(PREC.unsafe, seq('unsafe', $._scope_expression)),

    postfix_expression: $ => prec(PREC.inc_dec, seq(
      field('value', $._expression),
      field('operation', choice('++', '--'))
    )),

    /**
     * Literals
     */

    _literal: $ => choice(
      $.string_literal,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.array_literal,
    ),

    string_literal: _ => token(seq('"', repeat(/[^"]/), '"')),

    integer_literal: _ => token(seq(
      optional('-'),
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
      optional(choice(
        'i8',
        'u8',
        'i16',
        'u16',
        'i32',
        'u32',
        'i64',
        'u64',
      ))
    )),

    float_literal: _ => token(seq(
      optional('-'),
      /[0-9]+/,
      optional(seq(
        '.',
        /[0-9]+/,
      )),
      optional(seq(
        choice('e', 'E'),
        /[0-9]+/,
      )),
      optional(seq('_', choice(
        'f32',
        'f64',
      )))
    )),

    boolean_literal: _ => choice('false', 'true'),

    array_literal: $ => seq('[', sep(',', $._expression), ']'),

    /**
     * Patterns
     */

    pattern: $ => prec(1, choice(
      $._literal,
      $.identifier,
      $.variant_pattern,
      $.wildcard_pattern,
    )),

    variant_pattern: $ => prec.left(seq(
      field('path', $.path),
      optional(field('fields', $._variant_subpatterns)),
    )),

    _variant_subpatterns: $ => paren(sep(',', $.pattern)),

    wildcard_pattern: _ => '..',
  }
});

/**
 * Creates a rule to match the given rule, surrounded by parenthesis.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function paren(rule) {
  return seq('(', rule, ')');
}

/**
 * Creates a rule to match the given rule, surrounded by braced braces.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function braced(rule) {
  return seq('{', rule, '}');
}

/**
 * Creates a rule to match one-or-more of the rules separated by the given separator.
 *
 * @param {String} separator
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function sep1(separator, rule) {
  return seq(rule, repeat(seq(separator, rule)));
}

/**
 * Creates a rule to match one-or-more of the rules separated by the given separator.
 *
 * @param {String} separator
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function sep(separator, rule) {
  return optional(sep1(separator, rule));
}

/**
 * Creates a rule to match zero-or-more of the rules separated by the given separator.
 *
 * An optional separator is allowed at the end.
 *
 * @param {String} separator
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function list(separator, rule) {
  return optional(seq(sep1(separator, rule), optional(separator)));
}

/**
 * Creates a rule to match zero-or-more of the given rule.
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function zero_or_more(rule) {
  return optional(repeat1(rule));
}

/**
 * Creates a rule to match zero-or-more of the rules contained within a block.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function in_block(rule) {
  return braced(zero_or_more(rule));
}
