test/corpus/def.txt
==========
Namespaces
==========

namespace std

namespace std::io

namespace std::io::buffers

----------

(source_file
  (namespace
    (path
      (identifier)))
  (namespace
    (path
      (scoped_identifier
        (type
          (path
            (identifier)))
          (identifier))))
  (namespace
    (path
      (scoped_identifier
        (type
          (path
            (scoped_identifier
              (type
                (path
                  (identifier)))
              (identifier))))
            (identifier)))))

==========
Imports
==========

import std (io)

import std (io, term)

import std::io (println)

import std::io (print, println)

----------

(source_file
  (import
    root: (path
      (identifier))
    items: (identifier))
  (import
    root: (path
      (identifier))
    items: (identifier)
    items: (identifier))
  (import
    root: (path
      (scoped_identifier
        root: (type
          name: (path
            (identifier)))
        name: (identifier)))
    items: (identifier))
  (import
    root: (path
      (scoped_identifier
        root: (type
          name: (path
            (identifier)))
        name: (identifier)))
    items: (identifier)
    items: (identifier)))

==========
Function declarations
==========

fn main() {}

fn foo() -> Bar {}

fn add(x: Int32, y: Int32) -> Int32 {
    return x + y;
}

fn add<T>(x: T, y: T) -> T {
    return x + y;
}

----------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameters))
  (function_definition
    name: (identifier)
    parameters: (parameters)
    return_type: (type
      name: (path
        (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type
          name: (path
            (identifier))))
      (parameter
        name: (identifier)
        type: (type
          name: (path
            (identifier)))))
    return_type: (type
      name: (path
        (identifier)))
    block: (statement
      (return_statement
        (binary_expression
          left: (variable_reference
            (identifier))
          right: (variable_reference
            (identifier)))))
    block: (statement
      (return_statement)))
  (function_definition
    name: (identifier)
    type_parameters: (type_parameters
      name: (identifier))
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (type
          name: (path
            (identifier))))
      (parameter
        name: (identifier)
        type: (type
          name: (path
            (identifier)))))
    return_type: (type
      name: (path
        (identifier)))
    block: (statement
      (return_statement
        (binary_expression
          left: (variable_reference
            (identifier))
          right: (variable_reference
            (identifier)))))
    block: (statement
      (return_statement))))

==========
External functions
==========

fn external main() {}

fn external main<T>() {}

fn external main() -> Int32 {}

----------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameters))
  (function_definition
    name: (identifier)
    type_parameters: (type_parameters
      name: (identifier))
    parameters: (parameters))
  (function_definition
    name: (identifier)
    parameters: (parameters)
    return_type: (type
      name: (path
        (identifier)))))

==========
Struct definitions
==========

struct Foo {}

struct Foo<T> {}

struct Foo {
    bar: Int32;
}

struct Foo {
    pub bar: Int32;
}

struct Foo {
    bar: Int32 = 1;
}

----------

(source_file
  (struct_definition
    (type_identifier))
  (struct_definition
    (type_identifier)
    (type_parameters
      (identifier)))
  (struct_definition
    (type_identifier)
    (struct_field
      (field_identifier)
      (type
        (path
          (identifier)))))
  (struct_definition
    (type_identifier)
    (struct_field
      (field_identifier)
      (type
        (path
          (identifier)))))
  (struct_definition
    (type_identifier)
    (struct_field
      (field_identifier)
      (type
        (path
          (identifier)))
    (integer_literal))))

==========
Implementations
==========

impl Empty {}

impl Function {
    fn empty() {}
}

impl Generic<Int32> {}

impl<T> Generic<T> {}

----------

(source_file
  (implementation
    (type
      (path
        (identifier))))
  (implementation
    (type
      (path
        (identifier)))
    (method_definition
      (identifier)
      (parameters)))
  (implementation
    (type
      (path
        (identifier))
      (type_arguments
        (type
          (path
            (identifier))))))
  (implementation
    (type_parameters
      (identifier))
        (type
          (path
            (identifier))
          (type_arguments
            (type
              (path
                (identifier)))))))

==========
Trait definitions
==========

trait Empty {}

trait Function {
    fn empty()
}

trait Function {
    fn empty() {}
}

trait Generic<T> {}

----------
(source_file
  (trait_definition
    (type_identifier))
  (trait_definition
    (type_identifier)
    (method_definition
      (identifier)
      (parameters)))
  (trait_definition
    (type_identifier)
    (method_definition
      (identifier)
      (parameters)))
  (trait_definition
    (type_identifier)
    (type_parameters
      (identifier))))

==========
Trait implementations
==========

use Add: Int32 {}

use Add: Int32 {
    pub fn add() -> Int32 { }
}

use Add: Int32 {
    fn add() { }
}

use Generic<T>: Int32 {}

----------

(source_file
  (trait_implementation
    name: (type
      name: (path
        (identifier)))
    target: (type
      name: (path
        (identifier))))
  (trait_implementation
    name: (type
      name: (path
        (identifier)))
    target: (type
      name: (path
        (identifier)))
    block: (method_definition
      name: (identifier)
      parameters: (parameters)
      return_type: (type
      name: (path
        (identifier)))))
  (trait_implementation
    name: (type
      name: (path
        (identifier)))
    target: (type
      name: (path
        (identifier)))
    block: (method_definition
      name: (identifier)
      parameters: (parameters)))
  (trait_implementation
    name: (type
      name: (path
        (identifier))
      type_arguments: (type_arguments
        (type
          name: (path
            (identifier)))))
    target: (type
      name: (path
        (identifier)))))

==========
Enum definitions
==========

enum Foo {}

enum IpKind {
    IPv4,
    IPv6
}

enum Token {
    Str(String),
    Int(Int32),
}

enum Token {
    Str(String, Location),
    Int(Int32, Location),
}

----------

(source_file
  (enum_definition
    name: (type_identifier)
    variants: (enum_variant_list))
  (enum_definition
    name: (type_identifier)
    variants: (enum_variant_list
      (enum_variant_definition
        name: (type_identifier))
      (enum_variant_definition
        name: (type_identifier))))
  (enum_definition
    name: (type_identifier)
    variants: (enum_variant_list
      (enum_variant_definition
        name: (type_identifier)
        fields: (type
          name: (path
            (identifier))))
      (enum_variant_definition
        name: (type_identifier)
        fields: (type
          name: (path
            (identifier))))))
  (enum_definition
    name: (type_identifier)
    variants: (enum_variant_list
      (enum_variant_definition
        name: (type_identifier)
        fields: (type
          name: (path
            (identifier)))
        fields: (type
          name: (path
            (identifier))))
      (enum_variant_definition
        name: (type_identifier)
        fields: (type
          name: (path
            (identifier)))
        fields: (type
          name: (path
            (identifier)))))))
